<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2013-2022 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>36</version>
    <relativePath />
  </parent>

  <artifactId>mybatis-cdi</artifactId>
  <version>1.2.0-SNAPSHOT</version>

  <name>mybatis-cdi</name>
  <url>https://www.mybatis.org/cdi</url>

  <inceptionYear>2013</inceptionYear>

  <scm>
    <url>https://github.com/mybatis/cdi</url>
    <connection>scm:git:ssh://github.com/mybatis/cdi.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/cdi.git</developerConnection>
    <tag>mybatis-cdi-1.1.3</tag>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/mybatis/cdi/issues</url>
  </issueManagement>
  <ciManagement>
    <system>Github</system>
    <url>https://github.com/mybatis/cdi/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages</id>
      <name>Mybatis GitHub Pages</name>
      <url>git:ssh://git@github.com/mybatis/cdi.git?gh-pages#</url>
    </site>
  </distributionManagement>

  <properties>
    <java.version>11</java.version>
    <java.release.version>11</java.release.version>
    <clirr.comparisonVersion>1.1.3</clirr.comparisonVersion>
    <findbugs.onlyAnalyze>org.mybatis.cdi.*</findbugs.onlyAnalyze>
    <module.name>org.mybatis.cdi</module.name>
    <osgi.import>org.mybatis.*;resolution:=optional,*</osgi.import>
    <osgi.dynamicImport>*</osgi.dynamicImport>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1669312911</project.build.outputTimestamp>
  </properties>

  <dependencies>
    <!-- MyBatis -->
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.11</version>
      <scope>provided</scope>
    </dependency>

    <!-- EE Apis -->
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>2.1.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.transaction</groupId>
      <artifactId>jakarta.transaction-api</artifactId>
      <version>2.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.enterprise</groupId>
      <artifactId>jakarta.enterprise.cdi-api</artifactId>
      <version>4.0.1</version>
      <scope>provided</scope>
    </dependency>

    <!-- Weld -->
    <dependency>
      <groupId>org.jboss.classfilewriter</groupId>
      <artifactId>jboss-classfilewriter</artifactId>
      <version>1.2.5.Final</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.weld.se</groupId>
      <artifactId>weld-se-core</artifactId>
      <version>5.0.1.Final</version>
      <scope>test</scope>
    </dependency>

    <!-- Tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.9.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>4.9.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.weld</groupId>
      <artifactId>weld-junit5</artifactId>
      <version>4.0.0.Final</version>
      <scope>test</scope>
    </dependency>

    <!-- Legacy support for atomikos -->
    <dependency>
      <groupId>javax.transaction</groupId>
      <artifactId>javax.transaction-api</artifactId>
      <version>1.3</version>
      <scope>provided</scope>
    </dependency>

    <!-- Database -->
    <dependency>
      <groupId>com.atomikos</groupId>
      <artifactId>transactions-jdbc</artifactId>
      <version>5.0.9</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>10.15.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derbyshared</artifactId>
      <version>10.15.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derbyoptionaltools</artifactId>
      <version>10.15.2.0</version>
      <scope>test</scope>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemProperties>
            <property>
              <name>derby.stream.error.file</name>
              <value>${project.build.directory}/derby.log</value>
            </property>
            <property>
              <name>com.atomikos.icatch.log_base_dir</name>
              <value>${project.build.directory}</value>
            </property>
          </systemProperties>
        </configuration>
        <executions>
            <execution>
              <id>default-test</id>
              <configuration>
                <excludes>
                  <exclude>**/FooServiceJTATest.java</exclude>
                </excludes>
              </configuration>
            </execution>
            <execution>
              <id>jta-test</id>
              <configuration>
                <excludes>
                  <exclude>**/FooServiceTest.java</exclude>
                  <exclude>**/MybatisExtensionTest.java</exclude>
                </excludes>
              </configuration>
              <goals>
                <goal>test</goal>
              </goals>
            </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <configuration>
          <locales>en,zh_CN</locales>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk17on</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <properties>
        <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
      </properties>
    </profile>
  </profiles>

</project>
